--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0cfef7b2",
+   "id": "d605b1c1",
    "metadata": {},
    "source": [
     "# assignment 1 -- poetry generator\n",
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72c2e2e5",
+   "id": "81eda4a9",
    "metadata": {},
    "source": [
     "experiments with the format and lines since i liked playing around with it"
@@ -350,6 +350,15 @@
     "# put everything together\n",
     "output = textwrap.fill(body, 20)\n",
     "print(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ec259d7",
+   "metadata": {},
+   "source": [
+    "# the final output\n",
+    "removing the \"your\" and \"my\" from the example code, and fussing around with the format more -- i was interested in how it feels like the computer is writing to the reader, that removing any personal words made it seem as though the computer is completely devoted to us and our purposes"
    ]
   },
   {
