--- a/assignment-2/assignment-2.ipynb
+++ b/assignment-2/assignment-2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "24a9683d",
+   "id": "f3cfcc4b",
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a31e605c",
+   "id": "73b9d8dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "61f24e7d",
+   "id": "79f58cd1",
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a876c1ac",
+   "id": "e9a9c5fc",
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "647e142a",
+   "id": "63fa7c14",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ba176a69",
+   "id": "96ecb41e",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "613a43c1",
+   "id": "b4d196be",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f841654e",
+   "id": "d4867c80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b223f0",
+   "id": "b34097e7",
    "metadata": {},
    "source": [
     "# trying to categorize words\n",
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "dc9918b4",
+   "id": "70d410b2",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "cd4b0cea",
+   "id": "ec684f54",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "6d802887",
+   "id": "48a1b51f",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "20cd6ae3",
+   "id": "72f68068",
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1863,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "84d0e479",
+   "id": "d7b7d2ae",
    "metadata": {},
    "outputs": [
     {
@@ -1895,19 +1895,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "f104bbc0",
+   "execution_count": 154,
+   "id": "8b84da29",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [152]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m picklen \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m picklen \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 20\u001b[0m     sentencelen \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;28mlen\u001b[39m(\u001b[43mpr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m))\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     22\u001b[0m     sentencelen \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;28mlen\u001b[39m(bb[i]))\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bunny. he From McGregor's proper wood When the were Stop gone get \n",
+      "Benjamin, the there; \n",
+      "\n",
+      "\n",
+      "\n",
+      "AT let He \n",
+      "\n",
+      "Presently who surprised \n",
+      "Then the climbed THAT Benjamin, their From Bunny. should \n",
+      "Sunday took shoes, \n",
+      "AT scarecrow hide \n",
+      "Rabbit them Mrs. McGregor's. sat after END got but Flopsy them, he \n",
+      "They had He \n",
+      "THEY the ceiling, \n",
+      "\n",
+      "Sunday red-brick little THIS suggested he WE took Peter. \n",
+      "OLD time passed, Also was they Cousin the flower-pot. Rabbits said Mrs. Mrs looked hop, \n",
+      "McGregor Bunny. Mrs. \n",
+      "He did bed, \n",
+      "When Mopsy, the \n",
+      "THAT most was An hidden and \n",
+      "LITTLE hid little His took people's \n",
+      "McGregors said person \n",
+      "Mrs. there go \n",
+      "Bunny got hand, Benjamin, thing still, McGregor, been was LITTLE fir-tree. was \n",
+      "THEY half a THIS half sat \n",
+      "A his widow; Benjamin, beautiful the \n",
+      "\n",
+      "\n",
+      "\n",
+      "He what at \n",
+      "Mr feeling was IT hidden perfectly \n",
+      "Benjamin, lavender). passed, \n",
+      "\n",
+      "Benjamin's gone Mrs. Bunny sold in Mrs. and might I a each. \n",
+      "Anyway, was his Anyway, potatoes. was \n",
+      "Mopsy a he \n",
+      "Mr and each. Rabbit's round and \n",
+      "\n",
+      "\n",
+      "Benjamin was of \n",
+      "OUTSIDE. he the THE said head \n",
+      "PETER himself ran \n",
+      "Perhaps water were Mrs a a Cottontail as a \n",
+      "\n",
+      "Mrs. INSIDE Presently, They looked picture \n",
+      "Rabbits most wriggled \n",
+      "THAT gone the \n",
+      "Rabbits lavender). was Mopsy, so his When a go, First fetch the \n",
+      "Flopsy said, But \n",
+      "Rabbit to his Sunday suggested were Sunday time odd THIS to stretched \n",
+      "Mopsy, not about Benjamin's perplexed he \n",
+      "THEY it him \n",
+      "They smoking after \n",
+      "FIVE there on Aunt. looking that \n",
+      "\n",
+      "There as was \n",
+      "FIVE to who Sunday potatoes. he WE his that ONE Mopsy, Rabbit's \n",
+      "Mrs might he French could He LITTLE along, Peter. LITTLE down quite \n",
+      "An potatoes. who END looking off \n",
+      "Little on wriggled \n",
+      "He not a Cottontail a a \n",
+      "ONE implored locking Mopsy had was \n",
+      "Flopsy wondered Rabbit's \n",
+      "THAT himself handkerchief \n",
+      "IT mouse still, \n",
+      "\n",
+      "Also squeezed whisper--\"who PETER fat on Bunny.) carefully, shut \n",
+      "OLD slipped nephew \n",
+      "Peter as for \n",
+      "They get once \n",
+      "First Mopsy, but McGregor newly be Rabbit of head \n",
+      "Mrs suggested tool-shed, \n",
+      "Cotton-tail Bunny and Perhaps said driven \n",
+      "Now fir-tree. Peter McGregor get and \n",
+      "AS lavender). Mrs. \n",
+      "THAT on Mrs. Rabbit's underneath He \n",
+      "Benjamin got Peter OUTSIDE. or mother Bunny one the \n",
+      "Bunny. caught a Mr. there of Perhaps down his \n",
+      "END from sat Peter. time quite Old round son. IT amongst flower-pot. \n",
+      "Mr. McGregor upper From sneezed--'Kertyschoo!' He \n",
+      "A sat odd \n",
+      "Also put such \n",
+      "Bunny. a once \n",
+      "Now from Presently, \n",
+      "OLD ate nephew \n",
+      "\n",
+      "Aunt. as and Flopsy plants. gate, Presently plants. off \n",
+      "\n",
+      "\n",
+      "Benjamin's Mrs. round. I as gate, \n",
+      "Flopsy wall away \n",
+      "INSIDE was his INSIDE said a Bunny a he \n",
+      "She potatoes. rosemary \n",
+      "THEY gone wood Cotton-tail! was Bunny. A was widow; \n",
+      "LITTLE fir-tree. much \n",
+      "Stop so there; \n",
+      "\n",
+      "There ever, hand, SHE was surprised Father red-brick and \n",
+      "AT down to She pocket-handkerchief, a \n",
+      "Once the person \n",
+      "It said HOURS. ONE suggested had An Bunny. From \n",
+      "THAT draw Presently, \n",
+      "But jacket head END perplexed of \n",
+      "McGregor's. lavender). was FIVE and Peter \n",
+      "END not he \n",
+      "McGregors Mr. naughty, THE beans had French newly was \n",
+      "Anyway, could were Peter. the odd \n",
+      "Once down he \n",
+      "\n",
+      "AS sat rabbits French Peter; papa THEN pocket-handkerchief, people's \n",
+      "\n",
+      "There from had \n",
+      "Bunny put at \n",
+      "PRESENTLY carefully, the Mr dears,' but \n",
+      "Perhaps a had \n",
+      "Flopsy so were Mr. in opinion Anyway, plants. it Cottontail a a \n",
+      "\n",
+      "Perhaps a Mrs. \n",
+      "Rabbit potatoes. handkerchief THEN of that Flopsy with after FIVE supper. She \n",
+      "AT down was Now ever, tam-o-shanter From a blackberries: \n",
+      "There draw wriggled \n",
+      "\n",
+      "ONE back had Bunny. ate of \n",
+      "PRESENTLY sat the \n",
+      "IT smoking him Cousin might quite \n",
+      "\n",
+      "THE he hide Bunny took the Mrs. them be \n",
+      "Cotton-tail! but his Stop McGregor after PRESENTLY lived widow; \n",
+      "I underneath mother \n",
+      "Peter's with in \n",
+      "\n",
+      "\n",
+      "AS might was \n",
+      "McGregor, a pitter-patter, \n",
+      "\n",
+      "Mopsy, he be \n",
+      "\n",
+      "McGregor, was gate, Now so that \n",
+      "Mopsy, some were THEN and they OUTSIDE. or the WHEN there wood FIVE Mopsy, half \n",
+      "First implored people's \n",
+      "Benjamin scarecrow he IT implored were \n",
+      "WE caught their She the two Mr. jacket family \n",
+      "One Benjamin, that \n",
+      "She he fur. INSIDE said gate! They to lost, Bunny only away \n",
+      "AT certainly ran \n",
+      "Mrs. ate white \n",
+      "PRESENTLY scarecrow rosemary \n",
+      "Also came get First took off \n",
+      "The his once \n",
+      "FIVE said, climbed \n",
+      "Once had rabbit THIS put who THIS looked McGregor's \n",
+      "LITTLE smoking to Then in person Then ever, had McGregor's implored the \n",
+      "Also back a \n",
+      "\n",
+      "THAT thing get Cotton-tail of of \n",
+      "Now underneath how HOURS. to round. \n",
+      "\n",
+      "McGregor's. he fine. \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "THE END\n"
      ]
     }
    ],
@@ -1932,7 +2095,7 @@
     "    picklen = random.randint(0,1)\n",
     "    if picklen == 0 and i < len(pr):\n",
     "        sentencelen = random.randint(0,len(pr[i]))\n",
-    "    elif picklen == 1 and i:\n",
+    "    elif picklen == 1 and i < len(bb):\n",
     "        sentencelen = random.randint(0,len(bb[i]))\n",
     "    while len(new_sentence) < sentencelen:\n",
     "        new_sentence += random.choice(categories['characters']) + ' '\n",
@@ -1941,12 +2104,13 @@
     "    new_sentence += '\\n'\n",
     "    story += new_sentence\n",
     "\n",
+    "story += \"THE END\"\n",
     "print(story)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bbb64a0e",
+   "id": "e07cfe93",
    "metadata": {},
    "source": [
     "# trying the method of replacing words by first letter"
@@ -1955,7 +2119,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "660ae7ae",
+   "id": "15b4e7a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "70532c84",
+   "id": "98ab4859",
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2334,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f45fc944",
+   "id": "65a15845",
    "metadata": {},
    "outputs": [
     {
@@ -2362,7 +2526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66766900",
+   "id": "ac25bc52",
    "metadata": {},
    "outputs": [],
    "source": []
