added final exp w blackout poetry

--- a/assignment-2/assignment-2.ipynb
+++ b/assignment-2/assignment-2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f3cfcc4b",
+   "id": "22724ecd",
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "73b9d8dd",
+   "id": "8afa4fce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "79f58cd1",
+   "id": "6afc7833",
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e9a9c5fc",
+   "id": "c81d36b2",
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "63fa7c14",
+   "id": "ec8753d8",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "96ecb41e",
+   "id": "321e648e",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b4d196be",
+   "id": "d98208ea",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d4867c80",
+   "id": "a30faf7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34097e7",
+   "id": "baabf7c4",
    "metadata": {},
    "source": [
     "# trying to categorize words\n",
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "70d410b2",
+   "id": "9873a7de",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "ec684f54",
+   "id": "28728e59",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "48a1b51f",
+   "id": "fdc49941",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "72f68068",
+   "id": "1dd08a92",
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1863,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "d7b7d2ae",
+   "id": "911ab3b6",
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "8b84da29",
+   "id": "773f60fa",
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e07cfe93",
+   "id": "190b5002",
    "metadata": {},
    "source": [
     "# trying the method of replacing words by first letter"
@@ -2119,7 +2119,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "15b4e7a8",
+   "id": "8d2d85b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "98ab4859",
+   "id": "948148f7",
    "metadata": {},
    "outputs": [
     {
@@ -2334,7 +2334,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "65a15845",
+   "id": "7f47ae63",
    "metadata": {},
    "outputs": [
     {
@@ -2524,12 +2524,479 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac25bc52",
+   "cell_type": "markdown",
+   "id": "adbc77f9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# trying to do some blackout poetry\n",
+    "\n",
+    "inspired by blackout poetry, i tried a quick experiement with removing words but keeping the spacing. this doesn't so much fiddle with the structure of the text but rather which text is perceived. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "93f4812c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          a little      rabbit      sat   on  a bank.\n",
+      "\n",
+      "         his                       trit-trot,\n",
+      "\n",
+      "                          it             Mr.   McGregor,\n",
+      "                        in  her       bonnet.\n",
+      "\n",
+      "                                             down        the\n",
+      "road,                    a            a             upon\n",
+      "relations,             lived     in  the   wood    at  the\n",
+      "of  Mr.   McGregor's\n",
+      "\n",
+      "THAT           full    of        holes;      and   in  the\n",
+      "of\n",
+      "                    Mopsy,      Cotton-tail\n",
+      "Peter.\n",
+      "\n",
+      "Old                 widow;      she   earned         living\n",
+      "by  knitting\n",
+      "                  and   muffetees         (I  once    bought\n",
+      "a pair    at  a bazaar).\n",
+      "She   also    sold    herbs,      and   rosemary        tea,\n",
+      "and   rabbit-tobacco              (which      is  what\n",
+      "WE  call    lavender).\n",
+      "\n",
+      "LITTLE      Benjamin                      want    to  see\n",
+      "his   Aunt.\n",
+      "\n",
+      "  came                                 nearly\n",
+      "top\n",
+      "of  his\n",
+      "\n",
+      "PETER     was                                      was\n",
+      "red\n",
+      "cotton      pocket-handkerchief.\n",
+      "\n",
+      "\"Peter,\"--said                    Benjamin,\n",
+      "\n",
+      "\n",
+      "PETER     replied--\"The             scarecrow           Mr.\n",
+      "McGregor's                     described\n",
+      "                       the\n",
+      "\n",
+      "\n",
+      "                 down                    and   assured\n",
+      "him\n",
+      "McGregor        had       out   in   gig,    and   Mrs.\n",
+      "McGregor        also;     and\n",
+      "\n",
+      "\n",
+      "PETER         he  hoped         it       rain.\n",
+      "\n",
+      "               Mrs.                               the\n",
+      "                      Cotton-tail!            fetch     some\n",
+      "more    camomile!\"\n",
+      "\n",
+      "         he         he           better      if  he  went\n",
+      "\n",
+      "    went        hand           and      upon    the   flat\n",
+      "of  the\n",
+      "   bottom                    here    they    looked\n",
+      "down    into    Mr.   McGregor's\n",
+      "              coat\n",
+      "          topped      with         tam-o-shanter\n",
+      "of  Mr.\n",
+      "\n",
+      "      Benjamin             \"It   spoils\n",
+      "gate;     the         way   to     in,   is  to  climb\n",
+      "down\n",
+      "\n",
+      "Peter                            was\n",
+      "below     was   newly     raked     and   quite     soft.\n",
+      "\n",
+      "         sown    with\n",
+      "\n",
+      "                                        over    the\n",
+      "          little\n",
+      "\n",
+      "                                       done\n",
+      "       clothes,                                  to\n",
+      "\n",
+      "\n",
+      "They        them    off      scarecrow.          There\n",
+      "had   been    rain    during         night;\n",
+      "                        and      coat\n",
+      "\n",
+      "Benjamin             on                           too\n",
+      "\n",
+      "    he  suggested         that    they    should      fill\n",
+      "the\n",
+      "onions,       as  a little      present       for   his\n",
+      "Aunt.\n",
+      "\n",
+      "     did   not   seem    to  be  enjoying        himself;\n",
+      "he  kept    hearing       noises.\n",
+      "\n",
+      "Benjamin,         on  the            was   perfectly\n",
+      "at  home,     and   ate    lettuce\n",
+      "       said    that           the                  the\n",
+      "\n",
+      "\n",
+      "                          papa       old\n",
+      "\n",
+      "           certainly\n",
+      "\n",
+      "PETER        not   eat   anything;         he  said    he\n",
+      "should      like    to    home.\n",
+      "he  dropped              onions.\n",
+      "\n",
+      "LITTLE      Benjamin        said    that    it  was   not\n",
+      "to  get   back    up  the\n",
+      "pear-tree,              a     of  vegetables.           He\n",
+      "boldly\n",
+      "other     end   of                    along     a little\n",
+      "on\n",
+      "a sunny              wall.\n",
+      "\n",
+      "   mice       on                         cherry-stones,\n",
+      "they\n",
+      "                            Bunny.\n",
+      "\n",
+      "PRESENTLY         Peter     let   the   pocket-handkerchief\n",
+      "again.\n",
+      "\n",
+      "    got   amongst       flower-pots,            and   frames\n",
+      "and   tubs;     Peter          noises\n",
+      "worse\n",
+      "\n",
+      "He  was   a     or  two   in  front       his   cousin,\n",
+      "when    he  suddenly        stopped.\n",
+      "\n",
+      "THIS    is  what    those     little      rabbits       saw\n",
+      "round     that    corner!\n",
+      "\n",
+      "Little      Benjamin            one   look,        then,\n",
+      "a minute      less\n",
+      "time,       hid   himself       and   Peter     and   the\n",
+      "onions      underneath          a large\n",
+      "basket....\n",
+      "\n",
+      "THE   cat   got   up  and            herself,        and\n",
+      "came    and   sniffed       at  the\n",
+      "\n",
+      "\n",
+      "Perhaps       she   liked     the   smell     of\n",
+      "\n",
+      "                 upon\n",
+      "\n",
+      "SHE   sat   there     for   FIVE    HOURS.\n",
+      "\n",
+      "* * * * *\n",
+      "\n",
+      "I\n",
+      "\n",
+      "      Peter     Rabbit         little      Benjamin\n",
+      "\n",
+      "   sun           behind                   was            in\n",
+      "afternoon;                  the   cat   sat       the\n",
+      "basket.\n",
+      "\n",
+      "AT  length           was   a pitter-patter,\n",
+      "pitter-patter,              and   some    bits    of\n",
+      "mortar\n",
+      "\n",
+      "The      looked      up  and   saw   old   Mr.   Benjamin\n",
+      "Bunny     prancing        along     the   top\n",
+      "  the         the   upper\n",
+      "\n",
+      "He     smoking       a       rabbit-tobacco,\n",
+      "and      a little            in  his\n",
+      "hand.\n",
+      "\n",
+      "He                  son.\n",
+      "\n",
+      "OLD   Mr.   Bunny     had                      cats.\n",
+      "\n",
+      "  took     tremendous              off   the   top   of  the\n",
+      "wall      to  the   top   of  the\n",
+      "cat,    and   cuffed        off             and   kicked\n",
+      "          off   a handful       of  fur.\n",
+      "\n",
+      "The   cat      too       surprised         to\n",
+      "\n",
+      "       Mr.   Bunny        driven      the          the\n",
+      "green-house,            he\n",
+      "the   door.\n",
+      "\n",
+      "    he  came          the         and          his\n",
+      "the\n",
+      "ears,     and   whipped          with    the   little\n",
+      "\n",
+      "    he  took    out   his   nephew      Peter.\n",
+      "\n",
+      "THEN      took    out   the   handkerchief            of\n",
+      "onions,       and          out   of  the\n",
+      "garden.\n",
+      "\n",
+      "When    Mr.   McGregor        returned        about\n",
+      "an  hour    later,      he          several\n",
+      "things      which     perplexed         him.\n",
+      "\n",
+      "It  looked      as  though      some    person      had\n",
+      "walking       all   over    the   garden      in\n",
+      "a     of  clogs--only                        were    too\n",
+      "ridiculously            little!\n",
+      "\n",
+      "Also      could                  how   the   cat   could\n",
+      "herself       up  INSIDE      the   green-house,\n",
+      "the   door        the   OUTSIDE.\n",
+      "\n",
+      "         got        his   mother      forgave       him,\n",
+      "because       she      so  glad    to\n",
+      "see   that    he     found     his   shoes     and   coat.\n",
+      "and\n",
+      "up  the                       and   old   Mrs.\n",
+      "strung      up  the         and\n",
+      "hung            the   kitchen                   the\n",
+      "\n",
+      "   END\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import textwrap\n",
+    "\n",
+    "for line in open(\"tale_of_benjamin_bunny.txt\"):\n",
+    "    words = line.split() \n",
+    "    output = [] \n",
+    "    sel = random.sample(words, random.randint(0,len(words)))\n",
+    "    \n",
+    "    for item in words:\n",
+    "        if item in sel:\n",
+    "            output.append(item)\n",
+    "        for char in item:\n",
+    "            output.append(' ')\n",
+    "    print(textwrap.fill(''.join(output), 60))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ed32d5f",
+   "metadata": {},
+   "source": [
+    "blackout poetry but without the spacing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "0894f3de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ONE morning rabbit sat\n",
+      "\n",
+      "He ears and listened to trit-trot, trit-trot a pony.\n",
+      "\n",
+      "A gig was coming along the road; it was driven by Mr.\n",
+      "McGregor, and\n",
+      "beside him Mrs. in her bonnet.\n",
+      "\n",
+      "down\n",
+      "road, and off--with and call his\n",
+      "who the at the back of McGregor's garden.\n",
+      "\n",
+      "and\n",
+      "Cotton-tail and Peter.\n",
+      "\n",
+      "a\n",
+      "a a\n",
+      "also and rosemary tea, and is\n",
+      "\n",
+      "\n",
+      "LITTLE Benjamin did not very want to see his Aunt.\n",
+      "\n",
+      "He came round the back of the and tumbled upon the\n",
+      "of his Cousin Peter.\n",
+      "\n",
+      "was sitting by himself. He poorly, and was dressed in a red\n",
+      "cotton pocket-handkerchief.\n",
+      "\n",
+      "little Benjamin, in\n",
+      "clothes?\"\n",
+      "\n",
+      "PETER replied--\"The Mr. McGregor's described\n",
+      "\n",
+      "coat.\n",
+      "\n",
+      "Little Benjamin sat down beside his cousin, and assured him\n",
+      "that\n",
+      "out certainly\n",
+      "for the day, wearing bonnet.\n",
+      "\n",
+      "he that would\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Peter said he he feel better if he for a walk.\n",
+      "\n",
+      "went hand got\n",
+      "the bottom the From they looked down Mr.\n",
+      "Peter's and shoes plainly to be seen upon the\n",
+      "scarecrow, topped with McGregor's.\n",
+      "\n",
+      "Benjamin spoils clothes squeeze under a\n",
+      "the get in, is down\n",
+      "\n",
+      "Peter fell down head first; it was of no consequence, as the\n",
+      "bed\n",
+      "below and\n",
+      "\n",
+      "\n",
+      "\n",
+      "They left a great odd little foot-marks all over the bed,\n",
+      "\n",
+      "\n",
+      "LITTLE said that first to be was to\n",
+      "clothes, they the\n",
+      "handkerchief.\n",
+      "\n",
+      "There\n",
+      "there was water the and the coat was shrunk.\n",
+      "\n",
+      "on the tam-o-shanter, but it was too him.\n",
+      "\n",
+      "THEN he suggested that they should fill the pocket-\n",
+      "handkerchief\n",
+      "onions, as a little for his Aunt.\n",
+      "\n",
+      "Peter did to noises.\n",
+      "\n",
+      "the was at ate\n",
+      "leaf. he was in the coming to the garden with his\n",
+      "father to get lettuces their\n",
+      "\n",
+      "\n",
+      "\n",
+      "The lettuces certainly were very fine.\n",
+      "\n",
+      "PETER did not he he should like to\n",
+      "he dropped half the onions.\n",
+      "\n",
+      "LITTLE Benjamin said that it not possible\n",
+      "pear-tree, with a load of vegetables. He led the way boldly\n",
+      "towards the\n",
+      "other end of the garden. They went along a on planks, under\n",
+      "a wall.\n",
+      "\n",
+      "mice door-steps\n",
+      "Peter Rabbit and little Benjamin Bunny.\n",
+      "\n",
+      "PRESENTLY Peter let the pocket-handkerchief go\n",
+      "\n",
+      "noises\n",
+      "worse ever, his eyes as big as\n",
+      "\n",
+      "front when he stopped.\n",
+      "\n",
+      "THIS rabbits round that corner!\n",
+      "\n",
+      "Little Benjamin took one look, then, half minute less than\n",
+      "no\n",
+      "time, himself and Peter and the onions large\n",
+      "\n",
+      "\n",
+      "THE cat got up and stretched herself, and came and at the\n",
+      "basket.\n",
+      "\n",
+      "she\n",
+      "\n",
+      "sat down the the\n",
+      "\n",
+      "SHE sat there for FIVE HOURS.\n",
+      "\n",
+      "* * * * *\n",
+      "\n",
+      "I you a Benjamin underneath\n",
+      "because it was quite and because the smell of onions was\n",
+      "fearful;\n",
+      "cry.\n",
+      "\n",
+      "The sun round wood, and it quite late in\n",
+      "still the sat upon the basket.\n",
+      "\n",
+      "AT was pitter-patter, pitter-patter, and some bits of\n",
+      "mortar fell from the wall\n",
+      "\n",
+      "The cat looked up and saw old Mr. Bunny prancing along\n",
+      "\n",
+      "\n",
+      "was a of and a little switch in\n",
+      "hand.\n",
+      "\n",
+      "looking his\n",
+      "\n",
+      "OLD Bunny no opinion whatever cats.\n",
+      "\n",
+      "the top the the top the\n",
+      "and cuffed it the and it into the\n",
+      "scratching off handful of fur.\n",
+      "\n",
+      "was surprised\n",
+      "\n",
+      "old Mr. Bunny had the cat into the green-house, he locked\n",
+      "\n",
+      "\n",
+      "the basket and took out by the\n",
+      "\n",
+      "\n",
+      "he took nephew\n",
+      "\n",
+      "THEN he out handkerchief of onions, marched out of\n",
+      "garden.\n",
+      "\n",
+      "When McGregor returned observed\n",
+      "perplexed him.\n",
+      "\n",
+      "\n",
+      "a pair of clogs--only the foot-marks were too ridiculously\n",
+      "little!\n",
+      "\n",
+      "\n",
+      "herself up INSIDE the green-house, locking the door upon the\n",
+      "OUTSIDE.\n",
+      "\n",
+      "WHEN home, forgave\n",
+      "see that he had found his shoes and coat. Cotton-tail and\n",
+      "Peter folded\n",
+      "up Rabbit strung up\n",
+      "them\n",
+      "\n",
+      "THE END\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import textwrap\n",
+    "\n",
+    "for line in open(\"tale_of_benjamin_bunny.txt\"):\n",
+    "    words = line.split() \n",
+    "    output = [] \n",
+    "    sel = random.sample(words, random.randint(0,len(words)))\n",
+    "    \n",
+    "    for item in words:\n",
+    "        if item in sel:\n",
+    "            output.append(item + ' ')\n",
+    "    print(textwrap.fill(''.join(output), 60))\n"
+   ]
   }
  ],
  "metadata": {
